update dockerfile to include entrypoint waiting for postgres before launching app

--- a/tdd_fastapi_docker/project/Dockerfile
+++ b/tdd_fastapi_docker/project/Dockerfile
@@ -22,3 +22,10 @@ RUN pip install -r requirements.txt
 
 # add app from local to workdir of container
 COPY . . 
+
+# add entrypoint.sh
+COPY ./entrypoint.sh .
+RUN chmod +x /usr/src/app/entrypoint.sh
+
+# run entrypoint.sh as the base command when executing the container
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
