--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
           docker build \
             --cache-from ${{ env.IMAGE }}:latest \
             --tag ${{ env.IMAGE }}:latest \
-            --file ./project/Dockerfile.prod \
-            "./project"
+            --file ./tdd_fastapi_docker/project/Dockerfile.prod \
+            "./tdd_fastapi_docker/project"
       - name: Push image
         run: |
           docker push ${{ env.IMAGE }}:latest
@@ -50,8 +50,8 @@ jobs:
           docker build \
             --cache-from ${{ env.IMAGE }}:latest \
             --tag ${{ env.IMAGE }}:latest \
-            --file ./project/Dockerfile.prod \
-            "./project"
+            --file ./tdd_fastapi_docker/project/Dockerfile.prod \
+            "./tdd_fastapi_docker/project"
       - name: Run container
         run: |
           docker run \
